force-app/main/default/objects/Filter_Product__c/Filter_Product__c.object-meta.xml
<CustomObject>
    <label>Filter Product</label>
    <nameField>
        <label>Filter Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>