force-app/main/default/objects/Filter_Product__c/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <description>Manufacturing/delivery estimate</description>
    <label>Lead Time Days</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>