force-app/main/default/objects/Filter_Product__c/fields/MERV_Rating__c.field-meta.xml
<CustomField>
    <fullName>MERV_Rating__c</fullName>
    <label>MERV Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>