force-app/main/default/objects/Filter_Product__c/validationRules/Dimensions_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Dimensions_must_be_positive</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  Width__c &lt;= 0,
  Height__c &lt;= 0,
  Depth__c &lt;= 0
)</errorConditionFormula>
    <errorMessage>Width, height, and depth must be greater than zero.</errorMessage>
</ValidationRule>