force-app/main/default/objects/Filter_Product__c/validationRules/Price_must_be_positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_must_be_positive</fullName>
    <active>true</active>
    <description>Unit price must be greater than zero.</description>
    <errorConditionFormula>Unit_Price__c &lt;= 0</errorConditionFormula>
    <errorMessage>Unit price must be greater than zero.</errorMessage>
</ValidationRule>